--- a/MyOrganizer/App/Views/singleAddress.html
+++ b/MyOrganizer/App/Views/singleAddress.html
@@ -17,7 +17,7 @@
 </div>
 
 <div id="singleAbBackground">
-    <h1 class="col-sm-offset-2 AbTitle" >{{singleAddress.FirstName}} {{singleAddress.LastName}}'s address details</h1>
+    <h1 class="col-sm-offset-2 AbTitle" >{{singleAddress.FirstName }}'s address details</h1>
     <div class="panel panel-body col-sm-7 col-sm-offset-2" id="singleAddress">
 
         <div class="row space">
