--- a/MyOrganizer/App/Views/editMeeting.html
+++ b/MyOrganizer/App/Views/editMeeting.html
@@ -32,7 +32,7 @@
                 <div class="form-group row">
                     <span class="span col-sm-4">meeting date</span>
                     <div class="form-group">
-                        <input type="text" class="form-control" placeholder={{singleTask.TaskDate | date:"MM/dd/yyyy"}}  datepicker-popup="MM/dd/yyyy" id="inlineMInputBox" ng-model="singleMeeting.MeetingDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
+                        <input type="date" class="form-control" placeholder="singleMeeting.MeetingDate" datepicker-popup="MM/dd/yyyy" id="inlineMInputBox" ng-model="singleMeeting.MeetingDate" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" />
                         <span class="input-group-btn"></span>
                     </div>
                 </div>
