--- a/MyOrganizer/App/Views/task.html
+++ b/MyOrganizer/App/Views/task.html
@@ -15,7 +15,8 @@
     </div>
 </div>
 
-<div id="TaskBackground">
+<div id="TaskBackground" >
+    <div class="container">
     <div class="searchText input-group col-sm-10 list">
         <div class="TaskList col-sm-offset-2">
             <h1 class="TTitle">Tasks List</h1>
@@ -34,6 +35,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 </div>
 
